# tts_openclaw

./: .gitignore  README.md  index.js  openclaw.plugin.json  openclaw_plugin.json  openclo_plugin.json  package.json  pyproject.toml
openclaw_kokoro_plugin/: __init__.py  cli.py  plugin.py
openclo_kokoro_plugin/: __init__.py  cli.py  plugin.py
